@@ -2,3 +2,4 @@
 
 * SLL/TLS support
 * Remove extra smtp headers generated by `jordan-wright/email`
+* Add docs/examples a-la https://github.com/sourcegraph/checkup
