@@ -1,3 +1,8 @@
+2016-08-14  Danil Kutkevich  <danil@kutkevich.org>
+
+        * anaconda.go, cmd/ptichka/main.go, configuration.go, ptichka.go:
+        Refactor all function to simplify testing.
+
 2016-07-30  Danil Kutkevich  <danil@kutkevich.org>
 
         * ptichka.go (Fly, getMedia): Downloads all attachments at one time.
